# fullstack_practice

./: .gitignore  index.html  package-lock.json  package.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ee4a2e52a121_initial_migration.py
backend/src/: main.py
backend/src/api/: task.py  user.py
backend/src/core/: database.py
backend/src/crud/: task.py  user.py
backend/src/graphql/: mutations.py  queries.py  types.py
backend/src/models/: task.py  user.py
backend/src/schemas/: task.py  user.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/api/: graphqlClient.ts  restClient.ts
frontend/src/components/: ContextCounter.tsx  ReduxCounter.tsx
frontend/src/context/: CounterContext.tsx
frontend/src/pages/: Home.tsx  ReduxPage.tsx
frontend/src/types/: index.ts
src/: App.tsx  HomePage.tsx
src/components/: ContextCounter.tsx  ReduxCounter.tsx
src/context/: CounterContext.tsx
src/pages/: ContextPage.tsx  HomePage.tsx  ReduxPage.tsx
src/store/: counterSlice.ts
